--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,30 @@
 * {
-    margin:0;
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
 body {
-    background-image: linear-gradient(120deg,#7c714c,#d6c6bd);
+    background-image: linear-gradient(120deg, #7c714c, #d6c6bd);
     color: white;
-    font-family: "Poppins",sans-serif;
+    font-family: "Poppins", sans-serif;
     min-height: 100vh;
-
 }
 
 header {
     font-size: 1.5rem;
 }
 
-header,form{
-    min-height:20vh;
+header,
+form {
+    min-height: 20vh;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-form input, form button {
+form input,
+form button {
     padding: 0.5rem;
     font-size: 2rem;
     border: none;
@@ -37,7 +38,7 @@ form button {
     transition: all 0.3s ease;
 }
 
-form button:hover{
+form button:hover {
     background: #d88771;
     color: white;
 }
@@ -60,40 +61,54 @@ form button:hover{
     justify-content: space-between;
     display: flex;
     align-items: center;
-    transition: all .5s ease;
+    transition: all 0.5s ease;
 }
 
 .todo li {
-    flex:1;   
+    flex: 1;
     color: black;
 }
 
-.trash-btn, .complete-btn {
-    background: #ff6f47;    
+.trash-btn {
+    background: #ff6f47;
     color: white;
     border: none;
     padding: 1rem;
     font-size: 1rem;
     cursor: pointer;
 }
+
+.complete-btn {
+    background: #ff6f47;
+    color: white;
+    border: none;
+    padding: 1rem;
+    font-size: 1rem;
+    cursor: pointer;
+}
+
 .complete-btn {
     background: green;
 }
 
-.todo-item{
+.todo-item {
     padding: 0rem 0.5rem;
 }
 
-.fa-trash, .fa-check {
+.fa-trash {
     pointer-events: none;
 }
 
-.completed{
+.fa-check {
+    pointer-events: none;
+}
+
+.completed {
     text-decoration: line-through;
     opacity: 0.5;
 }
 
-.fall{
+.fall {
     transform: translateY(8rem) rotateZ(20deg);
     opacity: 0;
 }
